adjust margins and add recipe card box

--- a/index.html
+++ b/index.html
@@ -20,16 +20,18 @@
 	<li class="flex-item">6</li>
 </ul>
 
+<div id="title-box">Pick One</div>
 <ul class="title-container">
 	<li class="title-item">1</li>
 	<li class="title-item">2</li>
 	<li class="title-item">3</li>
 	<li class="title-item">4</li>
+</ul>	
+<ul class="title-container">	
 	<li class="title-item">5</li>
 	<li class="title-item">6</li>
 	<li class="title-item">7</li>
 	<li class="title-item">8</li>
-	<li class="title-item">9</li>
 </ul>
 
 </body>
