addition of drag and drop HTML5

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	</header>	
 <div class="container">
 	<div class="row">
-		<div class="col-xs-6 col-sm-4 col-md-4"> 
+		<div class="col-xs-6 col-sm-4 col-md-4" id="meatball-recipe"> 
 				<img alt="Asian Pork Meatballs" class="img-max" src="http://d3ocwlpqxdtw9u.cloudfront.net/recipes/1384/c_main_dish_images/20151001-1931-14-7875/2P_092215_6_AsianPorkMeatballsButterLettuce_20-_204324_high_menu_thumb.jpg" />
 		</div>
 		<div class="col-xs-6 col-sm-4 col-md-4"> 
@@ -47,23 +47,23 @@
 			<div class="col-md-12 col-sm-12 col-xs-18">
 		   	<div id="recipecard-box">
 				<div class="row">
-					<div class="col-xs-6 col-sm-4 col-md-4"> 
-							<div class="card-size">Squid Ink Linguine Pasta</div>
+					<div class="col-xs-6 col-sm-4 col-md-4" id="drag-elements"> 
+							<div draggable="true" class="card-size">Squid Ink Linguine Pasta</div>
 					</div>		
-					<div class="col-xs-6 col-sm-4 col-md-4"> 
-							<div class="card-size"></div>
+					<div class="col-xs-6 col-sm-4 col-md-4" id="drag-elements"> 
+							<div draggable="true" class="card-size"></div>
 					</div>	
-					<div class="col-xs-6 col-sm-4 col-md-4"> 
-							<div class="card-size"></div>
+					<div class="col-xs-6 col-sm-4 col-md-4" id="drag-elements"> 
+							<div draggable="true" class="card-size"></div>
 					</div>	
-					<div class="col-xs-6 col-sm-4 col-md-4"> 
-							<div class="card-size"></div>
+					<div class="col-xs-6 col-sm-4 col-md-4" id="drag-elements"> 
+							<div draggable="true" class="card-size"></div>
 					</div>	
-					<div class="col-xs-6 col-sm-4 col-md-4"> 
-							<div class="card-size"></div>
+					<div class="col-xs-6 col-sm-4 col-md-4" id="drag-elements"> 
+							<div draggable="true" class="card-size"></div>
 					</div>	
-					<div class="col-xs-6 col-sm-4 col-md-4"> 
-							<div class="card-size"></div>
+					<div class="col-xs-6 col-sm-4 col-md-4" id="drag-elements"> 
+							<div draggable="true" class="card-size"></div>
 					</div>	
 			</div>
 			</div> 
